# mod-manager

./: .gitignore  .gitlab-ci.yml  Cargo.toml  meson.build  meson_options.txt
.github/workflows/: ci.yml
build-aux/: dev.mnts.ModManager.Devel.json
data/: dev.mnts.ModManager.desktop.in.in  dev.mnts.ModManager.gschema.xml.in  dev.mnts.ModManager.metainfo.xml.in.in
data/resources/: meson.build  resources.gresource.xml  style.css
data/resources/ui/: window.ui
data/resources/ui/components/: card.blp  mods_list.blp
data/resources/ui/windows/add_new_game/: add_new_game.blp
data/resources/ui/windows/main/: main.blp
data/resources/ui/windows/main/pages/: games_and_mods.blp  welcome.blp
po/: POTFILES.in
src/: application.rs  config.rs.in  dispatch.rs  main.rs  meson.build  mods_list.rs  settings.rs  window.rs
src/api/: base.rs  games.rs  loaders.rs  mod.rs  mods.rs
src/components/: card.rs  mod.rs  mods_list.rs
src/windows/: mod.rs
src/windows/add_new_game/: add_new_game.rs  mod.rs
src/windows/main/: main.rs  mod.rs
src/windows/main/pages/: games_and_mods.rs  mod.rs  welcome.rs
