[package]
name = "mod-manager"
version = "0.1.0"
authors = ["Tine Jozelj <tine@tjo.space>"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.7", package = "gtk4", features = ["v4_10"] }
tracing = "0.1.37"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
gsettings-macro = "0.1.20"

[dependencies.adw]
package = "libadwaita"
version = "0.5"
features = ["v1_4"]
