[package]
name = "mod-manager"
version = "0.1.0"
authors = ["Tine Jozelj <tine@tjo.space>"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.7", package = "gtk4", features = ["v4_12"] }
tracing = "0.1.37"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
gsettings-macro = "0.1.20"
gdk-pixbuf = "0.18.5"
bytes = "1.5.0"
futures = "0.3.30"

[dependencies.adw]
package = "libadwaita"
version = "0.5"
features = ["v1_4"]
